tests/cli/snapshots/cli__baseline__baseline_apply_jsx_context.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:2:17
     |
   2 |     return <div>Hello World</div>;
     |                 ^
  +     {/* glot-disable-next-line */}

Inserted 1 comment(s) in 1 file(s).

----- stderr -----
