tests/cli/snapshots/cli__baseline__baseline_dry_run.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
  --> ./src/app.tsx:2:17
     |
   2 |     return <div>Hello World</div>;
     |                 ^
  +     // glot-disable-next-line hardcoded

Would insert 1 comment(s) in 1 file(s):
  - hardcoded: 1 comment(s)
Run with --apply to insert these comments.

----- stderr -----
