tests/cli/snapshots/cli__baseline__baseline_hardcoded_in_jsx_attr_uses_slash_comment.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Inserted 1 comment(s) in 1 file(s) (processed 1 issue(s)):
  - hardcoded: 1 comment(s) (from 1 issue(s))

----- stderr -----
