tests/cli/snapshots/cli__baseline__baseline_hardcoded_multiline_jsx_attr_uses_slash_comment.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.jsx:4:25
     |
   4 |             placeholder="Enter name"
     |                         ^
  +             // glot-disable-next-line hardcoded

Inserted 1 comment(s) in 1 file(s):
  - hardcoded: 1 comment(s)

----- stderr -----
