tests/cli/snapshots/cli__baseline__baseline_hardcoded_ternary_jsx_expression_uses_slash_comment.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:5:19
     |
   5 |                 ? "Processing"
     |                   ^
  +                 // glot-disable-next-line hardcoded

  --> ./src/app.tsx:6:19
     |
   6 |                 : "Ready"}
     |                   ^
  +                 // glot-disable-next-line hardcoded

Inserted 2 comment(s) in 1 file(s):
  - hardcoded: 2 comment(s)

----- stderr -----
