tests/cli/snapshots/cli__baseline__baseline_inside_jsx_expression.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:5:20
     |
   5 |                 <p>No console output</p>
     |                    ^
  +                 // glot-disable-next-line hardcoded

  --> ./src/app.tsx:7:23
     |
   7 |                 <span>Has output</span>
     |                       ^
  +                 // glot-disable-next-line hardcoded

Inserted 2 comment(s) in 1 file(s):
  - hardcoded: 2 comment(s)

----- stderr -----
